--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "script.js",
   "dependencies": {
-    "dropbox": "^X.X.X" // La version actuelle du module Dropbox sera inscrite ici
+    "dropbox": "^10.34.0"
   },
-  // ... d'autres champs comme "scripts" et "license"
 }
